--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>QndReact</title>
-</head>
-<body>
-    <div id="root">
-        <h1>Hello World from webpack starter pack</h1>
-        <p>
-            This is a very basic webpack setup with just ES6 support and everything else is left upto your imagination
-        </p>
+  </head>
+  <body>
+    <div>
+      <h1>Webpack starter</h1>
+      <p>
+        This is a very basic webpack setup with just ES6 support
+      </p>
     </div>
-</body>
+  </body>
 </html>
