--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>QndReact</title>
   </head>
   <body>
-    <div>
+    <div id="root">
       <h1>Webpack starter</h1>
       <p>
         This is a very basic webpack setup with just ES6 support
